[B]Version 0.0.5[/B]
+ Torrent2http binaries updated to 1.0.1

[B]Version 0.0.4[/B]
+ Added some mime types for better detection

[B]Version 0.0.3[/B]
+ Detect media types

[B]Version 0.0.2[/B]
+ Added some configurable libtorrent options

[B]Version 0.0.1[/B]
+ Initial release