@@ -1,3 +1,7 @@
+[B]Version 0.0.6[/B]
++ Added code comments
+* Better support of unicode path names
+
 [B]Version 0.0.5[/B]
 + Torrent2http binaries updated to 1.0.1
 
